--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "bluecon"
-version = "0.4.3"
+version = "0.5.0-alpha.1"
 authors = [
   { name="Afonso Garcia", email="bluecon@afonsogarcia.dev" },
 ]
